# filesdb

./: .gitlab-ci.yml  LICENSE.txt  README.md  README.rst  index.py  pyproject.toml
filesdb/: database.py  get_files.py  get_projects.py  get_versions.py  guess_imports.py  index.py  read_bigquery.py  utils.py  web.py  wsgi.py
filesdb/templates/: index.html
