[tool.poetry]
name = "filesdb"
version = "0.1.0"
description = "File database for package manager"
readme = "README.md"
license = "MIT"

authors = [
    "Remi Rampin <remi@rampin.org>"
]

repository = "https://github.com/remram44/filesdb"
homepage = "https://github.com/remram44/filesdb"

keywords = ["files", "database", "package", "package manager", "pip", "pypi"]

classifiers = [
]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"
Flask = "^2.2"
SQLAlchemy = "^1.4.11"

google-cloud-bigquery = {version = "*", optional = true}
uWSGI = {version = "*", optional = true}
setuptools = "*"

[tool.poetry.extras]
bigquery = ["google-cloud-bigquery"]
uwsgi = ["uWSGI"]

[tool.poetry.dev-dependencies]
flake8 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
